@@ -2,10 +2,10 @@ Package: memisc
 Type: Package
 Title: Tools for Management of Survey Data, Graphics, Programming,
         Statistics, and Simulation
-Version: 0.95-38
-Date: 2012-02-15
+Version: 0.95-39
+Date: 2013-01-04
 Author: Martin Elff
-Maintainer: Martin Elff <melff@essex.ac.uk>
+Maintainer: Martin Elff <martin.elff@uni-konstanz.de>
 Description: One of the aims of this package is to make life easier for
         useRs who deal with survey data sets. It provides an
         infrastructure for the management of survey data including
@@ -20,6 +20,6 @@ License: GPL-2
 LazyLoad: Yes
 Depends: R (>= 2.9.0), lattice, grid, stats, methods, utils, MASS
 URL: http://www.martin-elff.net/software/memisc/
-Packaged: 2012-02-15 10:21:01 UTC; elff
+Packaged: 2013-01-05 09:24:27 UTC; ripley
 Repository: CRAN
-Date/Publication: 2012-02-15 12:57:01
+Date/Publication: 2013-01-05 10:34:07
